<resources>
    <string name="app_name">Lab3_Hamilton</string>
    <string name="action_settings">Settings</string>
    <string name="tf_Amount">Amount</string>
    <string name="tf_Tip">Tip</string>
    <string name="tf_Total">Total</string>
    <string name="btn_Calculate">Calculate</string>
    <string name="rb_10Percent">10%</string>
    <string name="rb_15Percent">15%</string>
    <string name="rb_20Percent">20%</string>
    <string name="rb_25Percent">25%</string>
    <string name="rb_30Percent">30%</string>
</resources>
